Revise content script

--- a/public/ext-css/index.css
+++ b/public/ext-css/index.css
@@ -72,14 +72,14 @@
 .HIGHLIGHTER_TARGET_WORD_CLASS.HIGHLIGHTER_FONT_SIZE_CLASS_SMALL,
 .HIGHLIGHTER_DETAIL_ITEM_CLASS.HIGHLIGHTER_FONT_SIZE_CLASS_SMALL,
 .HIGHLIGHTER_LINK_CLASS.HIGHLIGHTER_FONT_SIZE_CLASS_SMALL {
-  line-height: 18.5px !important;
+  line-height: 19.5px !important;
   font-size: 13.5px !important;
 }
 
 .HIGHLIGHTER_TARGET_WORD_CLASS.HIGHLIGHTER_FONT_SIZE_CLASS_MEDIUM,
 .HIGHLIGHTER_DETAIL_ITEM_CLASS.HIGHLIGHTER_FONT_SIZE_CLASS_MEDIUM,
 .HIGHLIGHTER_LINK_CLASS.HIGHLIGHTER_FONT_SIZE_CLASS_MEDIUM {
-  line-height: 19px !important;
+  line-height: 20px !important;
   font-size: 14.6px !important;
 }
 
@@ -97,6 +97,13 @@
 
 .HIGHLIGHTER_DETAIL_ITEM_CLASS {
   /* margin-bottom: 4px !important; */
+}
+
+.HIGHLIGHTER_POS_CLASS {
+  margin-right: 6px !important;
+}
+
+.HIGHLIGHTER_DEF_CLASS {
 }
 
 .HIGHLIGHTER_ICON_CLASS {
