Refactor: enhance content-script performance
1. Dynamic generate popups on hover/click in real-time instead of generating hundreds or thousands of popups at once
2. Eliminate extra newlines when copy text that included highlighted content
3. Optimize the update process by comparing the latest config and the previous config
4. Ensure svg are correctly loaded and displayed

--- a/src/content/index.css
+++ b/src/content/index.css
@@ -29,8 +29,15 @@
   background-color: rgb(200 178 234 / 80%) !important;
 }
 
+/* .HIGHLIGHTER_CLASS:focus > .HIGHLIGHTER_DETAIL_CLASS { */
+/*   visibility: visible !important; */
+/* } */
+
+/* .HIGHLIGHTER_CLASS:hover > .HIGHLIGHTER_DETAIL_CLASS { */
+/*   visibility: visible !important; */
+/* } */
+
 .HIGHLIGHTER_DETAIL_CLASS {
-  visibility: hidden !important;
   position: absolute !important;
   min-width: 100px !important;
   max-width: 400px !important;
@@ -49,14 +56,6 @@
 
 .HIGHLIGHTER_DETAIL_CLASS > *:not(:last-child) {
   margin: 0 0 6px 0 !important;
-}
-
-.HIGHLIGHTER_CLASS:focus > .HIGHLIGHTER_DETAIL_CLASS {
-  visibility: visible !important;
-}
-
-.HIGHLIGHTER_CLASS:hover > .HIGHLIGHTER_DETAIL_CLASS {
-  visibility: visible !important;
 }
 
 .HIGHLIGHTER_TARGET_WORD_CLASS,
@@ -107,7 +106,7 @@
 }
 
 .HIGHLIGHTER_ICON_CLASS {
-  margin: -4px 0 !important;
+  margin: -5px 0 -5px 12px !important;
   line-height: 0px !important;
   cursor: pointer !important;
   text-decoration: none !important;
